2009-01-17  Claudio Saavedra  <csaavedra@igalia.com>

	* modulesets/gnome-suites-2.26.modules: Replace eog dependency on
	libgnomeui with gnome-desktop.

2009-01-13  Christian Persch  <chpe@gnome.org>

	* modulesets/gnome-suites-2.26.modules: Use the gnome-2-26 branch for
	epiphany.

2009-01-12  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/freedesktop-2.26.modules: Added dbus-glib and 
	telepathy-glib from git so that telepathy-gabble has new-enough 
	versions to build, instead of just using the tarball versions from 
	the included gnome-external-deps modules. Revert this if it disturbs 
	you somehow. 

2009-01-12  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/freedesktop-2.26.modules:
	Add libnice and telepathy-farsight modules; adjust farsight2 deps;
	add telepathy-farsight to meta-telepathy-connection-managers.

2009-01-12  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.26.modules: (re)add devhelp-webkit module
	* modulesets/gnome-suites-2.26.modules: change devhelp (gecko) module
	to use gnome-2-22 branch on svn insted tarball 

2009-01-12  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.26.modules: bumped telepathy-glib to
	0.7.19.

2009-01-12  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/freedesktop-2.26.modules: Copy the loudmouth module  
	definition from gnome-2.26 modules (not included) because it was an  
	undefined dependency of telepathy-gabble.

2009-01-11  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* modulesets/gnome-2.26.modules: Use new vala release (0.5.5).

2009-01-09  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* modulesets/gnome-2.26.modules: Use new vala release (0.5.4).

2009-01-09  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/arch.py, jhbuild/versioncontrol/bzr.py,
	jhbuild/versioncontrol/cvs.py: properly import CommandError exception
	in arch, bzr and cvs modules.  (closes: #567107)

2009-01-07  Frederic Peters  <fpeters@0d.be>
