@@ -2137,7 +2137,9 @@ libgnomecanvas is missing branch definition for gnome-2-20
 	<command>configure</command>.
 
 	<sgmltag class="attribute">skip-autogen</sgmltag> chooses whether
-	or not to run autogen.sh.
+	or not to run autogen.sh, it is a boolean with an extra
+	<literal>never</literal> value to tell JHBuild to never skip running
+	<command>autogen.sh</command>.
 	<sgmltag class="attribute">makefile</sgmltag> specifies the
 	filename of the makefile to use.</para>
 
