@@ -40,7 +40,7 @@
 	makeinstallargs CDATA	#IMPLIED
 	autogen-sh	CDATA	#IMPLIED
 	makefile	CDATA	#IMPLIED
-	skip-autogen	(true|false) "false"
+	skip-autogen	(true|false|never) "false"
 	supports-non-srcdir-builds (yes|no) "yes"
 	autogen-template CDATA  #IMPLIED
 	check-target	(true|false) "true">
