@@ -1,3 +1,9 @@
+2009-01-19  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/modtypes/autotools.py, modulesets/moduleset.dtd,
+	doc/C/jhbuild.xml: added support for a new skip-autogen value, "never",
+	so autogen.sh (or configure) is never skipped.  (closes: #566437)
+
 2009-01-17  Claudio Saavedra  <csaavedra@igalia.com>
 
 	* modulesets/gnome-suites-2.26.modules: Replace eog dependency on
